# TrainAllocationViewer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  local.properties  reference_codes  schema.graphql
.github/workflows/: build-docker.yml
.sqlx/: query-0353c0f7828c863f830cb21a75c6dfbf19428a807fde4d2b4a9e516db6527889.json  query-0f50a0c329aa607be44b940fc293c9b72e5c2e76f57ca7b4e2c089aaa5a4f353.json  query-2f4307f84572a37b7734a11a4386fc5de5b4825edb2d09155722bac611bb782e.json  query-74ccc6636302c785843d5624456c3189636fa8cb2747f46519514f22c10c014c.json  query-9ee3541c6d12d037af52e6c1e6251d40c8c36ef7836f8a09f176c51f5052f513.json  query-d1e0e687f54a05028893665d359b06aa92eecbe8fb13bc4411769026e1a740a0.json
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/gradle/: libs.versions.toml
apps/web/: .dockerignore  Dockerfile  astro.config.mjs  package.json
migrations/: 20260209123240_create_allocations_table.sql  20260209135920_create_vehicles_table.sql  20260209165754_create_resourcegroup_table.sql
nix/modules/: bun.nix  devshell.nix  rust.nix
services/api/: Cargo.toml
services/api/migrations/: 20260212140916_add_additional_columns_to_tables.sql  20260302120000_add_allocations_unique_constraint.sql  (+7 more)
services/kafkaproxy/: Cargo.toml  README.md
src/: corpus.rs  graphql.rs  kafka.rs  main.rs  payload.rs  s3.rs
src/db/: allocation.rs  location.rs  mod.rs  resource_group.rs  schema.rs  vehicle.rs
src/graphql/: allocation.rs  mod.rs  vehicles.rs
src/providers/: alloc_consist.rs  corpus.rs  mod.rs
(+39 files in other folders)
